[package]
name = "roukens"
version = "0.1.1"
edition = "2021"
description = "A library for easy messaging, token generation, and validation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
hashbrown = "0.14.3"
random-string = "1.1.0"
